--- a/FL13_HW5/homework/css/styles.css
+++ b/FL13_HW5/homework/css/styles.css
@@ -33,17 +33,20 @@ body {
 
 /* Your styles go here */
 
-header {
+header, footer {
   background-color: #162b4d;
+}
+
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: white;
+  padding: 0px 50px;
   margin-bottom: 20px;
+  color: white;
 }
 
 header p {
-  margin-left: 50px;
   font-size: 28px;
   font-weight: 300;
 }
@@ -54,7 +57,6 @@ header span {
 
 nav {
   width: 300px;
-  margin-right: 50px;
 }
 
 ul {
@@ -67,8 +69,14 @@ li {
   font-size: 14px;
 }
 
+main {
+  display: flex;
+}
+
 .travel-cards {
   width: 730px;
+  box-sizing: border-box;
+  margin-right: 20px;
 }
 
 .travel-cards article {
@@ -79,9 +87,20 @@ li {
   width: 50%;
 }
 
-.traver-cards-text-wrap {
+.travel-cards-text-wrap {
   position: relative;
-  padding: 35px 20px;
+  padding: 0px 80px 0px 25px;
+  color: #484848;
+}
+
+.travel-cards-text-wrap h2 {
+  font-size: 26px;
+  font-weight: 300;
+}
+
+.travel-cards-text-info {
+  font-size: 11px;
+  line-height: 24px;
 }
 
 .travel-cards-date {
@@ -89,4 +108,70 @@ li {
   right: 20px;
   top: 0px;
   text-align: center;
+}
+
+.travel-cards-date {
+  font-size: 18px;
+}
+
+.travel-cards-date-monthday {
+  font-size: 32px;
+}
+
+.travel-cards-date, .travel-cards-date-monthday {
+  font-weight: 300;
+}
+/* For reversed items */
+
+.travel-cards article:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
+.travel-cards article:nth-child(even) .travel-cards-text-wrap {
+  padding: 0px 25px 0px 80px;
+  text-align: right;
+}
+
+.travel-cards article:nth-child(even) .travel-cards-date {
+  position: absolute;
+  right: inherit;
+  left: 20px;
+}
+
+/* End of reversed */
+
+.news-cards {
+  width: 250px;
+  box-sizing: border-box;
+}
+
+.news-cards article {
+  background-color: white;
+}
+
+.news-cards img {
+  width: 100%;
+}
+
+#post-5 {
+  height: 350px;
+  background: url(../img/post5.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  margin-bottom: 20px;
+}
+
+#post-5 .travel-cards-text-wrap {
+  padding: 150px 20px 0px 20px;
+  color: white;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 25px;
+  align-items: center;
+  font-size: 12px;
+  color: #7a828f;
 }
