Deleted CSS variables, fixed footer margins, lang param

--- a/FL13_HW5/homework/css/styles.css
+++ b/FL13_HW5/homework/css/styles.css
@@ -2,15 +2,6 @@
  * Feel free to change name of colors if you need it
  * Feel free to add new colors if you need it
  */
-
-:root {
-  --bg-color--dark: #0b192f;
-  --bg-color--medium: #162b4d;
-  --text--color: #484848;
-  --link: #fff;
-  --link--hover: #b8b8b8;
-}
-
 body {
   font-family: roboto;
   max-width: 1000px;
@@ -293,9 +284,15 @@ footer {
 
   footer {
     flex-direction: column;
-    justify-content: none;
-    align-items: none;
     text-align: center;
+  }
+
+  footer p:nth-child(1) {
+    margin-bottom: 0px;
+  }
+
+  footer p:nth-child(2) {
+    margin-top: 0px;
   }
 }
 
