--- a/FL13_HW12/homework/styles.css
+++ b/FL13_HW12/homework/styles.css
@@ -20,8 +20,8 @@ form {
 }
 
 #interface {
-    background-color: burlywood;
-    border: 3px solid saddlebrown;
+    background-color: honeydew;
+    border-bottom: 3px solid lightskyblue;
     margin-bottom: 20px;
     display: flex;
     align-items: center;
@@ -30,10 +30,12 @@ form {
 
 #interface button {
     margin-left: 50px;
-    font-size: 24px;
-    border-radius: 5px;
-    background-color: lightgrey;
-    border: 2px solid black;
+    font-size: 16px;
+    border-radius: 10px;
+    background-color: lightskyblue;
+    width: 120px;
+    height: 40px;
+    font-weight: 600;
 }
 
 .book-img {
@@ -43,18 +45,28 @@ form {
 }
 
 .book-list-item {
+    box-sizing: border-box;
     width: 400px;
+    height: 55px;
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
+    padding: 0px 20px;
+    justify-content: space-between;
     background-color: whitesmoke;
     border-radius: 10px;
     box-shadow: 0 0 10px 5px rgba(160, 159, 159, 0.705);
     margin-bottom: 10px;
 }
 
+.book-list-item button {
+    width: 75px;
+    height: 35px;
+    border-radius: 5px;
+    background-color: lightgrey;
+}
+
 .book-list-item:hover {
-    background-color: rgb(230, 227, 227);
+    background-color: honeydew;
 }
 
 .work-space {
