--- a/FL13_HW13/homework/css/styles.css
+++ b/FL13_HW13/homework/css/styles.css
@@ -1,32 +1,14 @@
-header, .home, .games-1, .games-2, footer {
-    padding: 0px 150px;
-}
-
-.home {
-    display: flex;
-    align-items: center;
-}
-
 .home button, #footer-search-btn {
     background-color: #ff7f50;
-    font-weight: 600;
+    font-weight: 500;
     color: white;
 }
 
-.home-info-wrap, .home img {
-    width: 50%;
+header .row {
+    padding: 0px;
 }
 
-.games-1, .games-2 {
-    padding: 50px 0px;
-}
-
-.games-1 {
-    background-color: #343a40;
-    color: white;
-}
-
-.games-1-info, .games-2-info {
-    width: 500px;
-    margin: 0px auto;
+header .row .col {
+    padding-left: 0px;
+    padding-right: 0px;
 }
